<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="163dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="472dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_menu_email"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:inputType=" "
        android:padding="15dp"
        android:text="@string/emails"
        app:layout_constrainedWidth_percent=".8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints,TextFields" />

    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_menu_key"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:padding="15dp"
        android:text="@string/password"
        app:layout_constrainedWidth_percent=".8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        tools:ignore="LabelFor,MissingConstraints,TextFields" />

    <EditText
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_menu_key"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:inputType=" "
        android:padding="15dp"
        android:text="@string/confirm_password"
        app:layout_constrainedWidth_percent=".8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor,MissingConstraints,TextFields"
        tools:layout_editor_absoluteY="363dp" />

    <Button
        android:id="@+id/Login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="513dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:text="Don't have account?"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="609dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signing"
        android:text="Signup"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="653dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buyangatin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="107dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>